@@ -1,7 +1,7 @@
 # Maintainer: Julien Nicoulaud <julien.nicoulaud@gmail.com>
 # Source: https://github.com/nicoulaj/archlinux-packages
 pkgname=broom
-pkgver=1.3.0
+pkgver=1.4.0
 pkgrel=1
 pkgdesc="A disk cleaning utility for developers."
 arch=(any)
@@ -11,7 +11,7 @@ depends=('bash>=4')
 changelog=Changelog
 conflicts=(${pkgname}-git)
 source=("https://github.com/downloads/nicoulaj/broom/${pkgname}-${pkgver}.tar.gz")
-md5sums=('ad736fecb5c217a990bc314f4a6cca84')
+md5sums=('8cce31756cc82577fec2ff50860a5b57')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
