@@ -1,8 +1,8 @@
 # Maintainer: Benjamin Hedrich <kiwisauce (a) pagenotfound (dot) de>
 
 pkgname=eclipse-pydev
-pkgver=2.3.0
-pkgrel=2
+pkgver=2.4.0
+pkgrel=1
 pkgdesc="Python IDE for Eclipse"
 url="http://pydev.org/"
 arch=('any')
@@ -10,8 +10,8 @@ license=('EPL')
 depends=('eclipse')
 makedepends=('unzip')
 conflicts=('eclipse-aptana')
-source=("http://downloads.sourceforge.net/project/pydev/pydev/PyDev%20${pkgver}/PyDev%20${pkgver}.zip")
-sha256sums=('7cee79ac2a9b5176146772e05d3fc63069fcbb9700c098fcf84fd932a4bf83f2')
+source=("PyDev ${pkgver}.zip::http://downloads.sourceforge.net/project/pydev/pydev/PyDev%20${pkgver}/PyDev%20${pkgver}.zip")
+sha256sums=('36f6953d1043249d59e57b5375be07cb37a372a329609d5e1e624f6eba870298')
 
 
 
