@@ -3,7 +3,7 @@
 # Source: https://github.com/nicoulaj/archlinux-packages
 pkgname=sickbeard
 pkgver=alpha492
-pkgrel=2
+pkgrel=3
 pkgdesc="A PVR application that downloads and manages your TV shows."
 arch=(any)
 url="http://www.sickbeard.com"
@@ -16,15 +16,15 @@ backup=(etc/conf.d/${pkgname}
 install=${pkgname}.install
 changelog=Changelog
 conflicts=(${pkgname}-git)
-source=("${pkgname}.tar.gz::https://github.com/midgetspy/Sick-Beard/tarball/build-${pkgver#alpha}"
+source=("${pkgname}-${pkgver}.tar.gz::https://github.com/midgetspy/Sick-Beard/tarball/build-${pkgver#alpha}"
         "${pkgname}.sh"
         "${pkgname}.conf.d"
         "${pkgname}.rc.d"
         "${pkgname}.ini")
 md5sums=('dcae4d8ac1cd1ad06e52ddb51d27c79f'
          '1e3b4ab901fa799d5e1f61fd5cef00ae'
-         'bb98519964130b1da9b2e7e6f24250c3'
-         'c8e8ac803fce30d023830a2ebe6b74f3'
+         'f7c466362ceab946a1df0d682d6f912f'
+         '5691396c67e0d59c2800b0d252f81b08'
          '3ebf06fc9cecaf3b71e4c035ce8a0230')
 
 build() {
