@@ -7,12 +7,15 @@ DAEMON=sickbeard
 
 [ -r /etc/conf.d/$DAEMON ] && . /etc/conf.d/$DAEMON
 
-[ -f $SB_PID_FILE ] && PID=$(cat $SB_PID_FILE)
+[ -f $SB_PID_FILE_DIR/$DAEMON.pid ] && PID=$(cat $SB_PID_FILE_DIR/$DAEMON.pid)
 
 case "$1" in
  start)
    stat_busy "Starting $DAEMON"
-   [ -z "$PID" ] && su - $SB_USER -s /bin/sh -c "$SB_BIN --quiet --nolaunch --daemon --data $SB_DATA --config $SB_CONF --port $SB_PORT --pidfile $SB_PID_FILE" &>/dev/null
+   if [ -z "$PID" ]; then
+     mkdir -p $SB_PID_FILE_DIR && chown $SB_USER: $SB_PID_FILE_DIR
+     su - $SB_USER -s /bin/sh -c "$SB_BIN --quiet --nolaunch --daemon --data $SB_DATA --config $SB_CONF --port $SB_PORT --pidfile $SB_PID_FILE_DIR/$DAEMON.pid" &>/dev/null
+   fi
    if [ $? = 0 ]; then
      add_daemon $DAEMON
      stat_done
@@ -30,7 +33,7 @@ case "$1" in
        rm_daemon $DAEMON
        stat_done
      else
-       echo "$DAEMON seems to be still running. Please stop it manually and remove $SB_PID_FILE and /run/daemons/$DAEMON." >&2
+       echo "$DAEMON seems to be still running. Please stop it manually and remove $SB_PID_FILE_DIR/$DAEMON.pid and /run/daemons/$DAEMON." >&2
        stat_fail
        exit 1
      fi
