@@ -1,18 +1,18 @@
 # Maintainer: lepokle <devel@leo.von-klenze.de>
 pkgname='thunderbird-gnome-keyring'
-pkgver=0.6
-pkgrel=2
+pkgver=0.7
+pkgrel=1
 pkgdesc="Gnome-keyring integration for Thunderbird"
 arch=('i686' 'x86_64')
-url='http://github.com/infinity0/firefox-gnome-keyring'
+url='http://github.com/lepokle/firefox-gnome-keyring'
 license=('GPL')
-depends=('thunderbird>=9.0' 'gnome-keyring')
-makedepends=('zip' 'unzip' 'xulrunner>=9.0')
+depends=('thunderbird>=10.0' 'gnome-keyring')
+makedepends=('zip' 'unzip' 'xulrunner>=10.0')
 provides=('thunderbird-gnome-keyring')
-source=("${pkgname}-${pkgver}.tar.gz::https://nodeload.github.com/infinity0/firefox-gnome-keyring/tarball/0.6")
-md5sums=('9364857f7a90a8ae3c237a0390705214')
+source=("${pkgname}-${pkgver}.tar.gz::$url/tarball/$pkgver")
+md5sums=('acaae5dadf8fc0b2127d7505378a51d4')
 
-_subdir="infinity0-firefox-gnome-keyring-fe001aa"
+_subdir="lepokle-firefox-gnome-keyring-d8da015"
 
 build()
 {
