@@ -4,12 +4,12 @@
 
 pkgname=viewnior-wp
 pkgver=1.1
-pkgrel=3
+pkgrel=4
 pkgdesc="A simple, fast and elegant image viewer program with feh background support"
 arch=('i686' 'x86_64')
 url="http://xsisqox.github.com/Viewnior/"
 license=('GPL3')
-depends=('gtk2>=2.12')
+depends=('gtk2>=2.12' 'gconf')
 makedepends=('make' 'intltool>=0.35' 'pkgconfig>=0.9' 'perl>=5.8.1')
 provides=(viewnior)
 conflicts=(viewnior)
