@@ -1,3 +1,9 @@
+2012-02-05 Julien Nicoulaud <julien.nicoulaud@gmail.com>
+
+	* build-492-3 :
+	Fix daemon not working after reboot (because directory /var/run/sickbeard
+	not persistent).
+
 2012-02-02 Julien Nicoulaud <julien.nicoulaud@gmail.com>
 
 	* build-492-2 :
